@@ -1320,9 +1320,9 @@ int init_tcpip_plugin() {
         exit(0);
     }
     /////////////////////////////////////////////
-    /////////// INITILIZING PROTO_MANET //////////////////
-    if (!init_proto_manet_struct()) {
-        fprintf(stderr, "Error initializing protocol proto_manet\n Exiting\n");
+    /////////// INITILIZING PROTO_FNAC //////////////////
+    if (!init_proto_fnac_struct()) {
+        fprintf(stderr, "Error initializing protocol PROTO_FNAC\n Exiting\n");
         exit(0);
     }
     /////////////////////////////////////////////
